<resources>
    <string name="app_name">Nature Observer App</string>
    <string name="helloObserver">Hallo Beobachter</string>
    <string name="newObservation">Neue Beobachtung</string>
    <string name="showAllObservations">Zeige alle Beobachtungen</string>

    <string name="newObservationTitle">Titel</string>
    <string name="newObservationDate">Datum</string>
    <string name="newObservationLocation">Ort</string>
    <string name="newObservationNotes">Anmerkungen</string>
    <string name="saveBtn">Speichern</string>
    <string name="backBtn">Zurück</string>
    <string name="savedToast">Neuer Eintrag gespeichert</string>

    newObservationBack
</resources>