<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/green2"
    tools:context=".MainActivity"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="8dp"
        android:backgroundTint="@color/grey1"
        app:cardElevation="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/helloObserver"
                android:textColor="#363A43"
                android:textSize="26sp"
                android:textStyle="bold">
            </TextView>

            <Button
                android:id="@+id/newObservationBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/green1"
                android:text="@string/newObservation"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/showAllObservationsBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="5dp"
                android:backgroundTint="@color/green1"
                android:text="@string/showAllObservations"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>